# project_amber_c

./: .gitignore  .gitmodules  config.toml  log.txt  meson.build  run.sh
src/: main.c  meson.build
subprojects/amber_engine/: meson.build
subprojects/amber_engine/include/amber_engine/: engine.h
subprojects/amber_engine/src/: engine.c  engine.h  globals.c  globals.h  main.c
subprojects/amber_engine/src/bindings/: proc_table.c  proc_table.h
subprojects/amber_engine/src/common/: c-logger.c  c-logger.h  library_definitions.h  stc_implementation.c
subprojects/amber_engine/src/config/: config.c  config.h
subprojects/amber_engine/src/memory/: library_definitions.h  memory.c  memory.h
subprojects/amber_engine/src/runtime/: executor.c  executor.h  system_manager.c  system_manager.h
subprojects/amber_engine_bindings/: meson.build
subprojects/amber_engine_bindings/include/amber_engine/: engine.h
subprojects/amber_engine_bindings/include/amber_engine/bindings/: bindings.h
subprojects/amber_engine_bindings/src/bindings/: bindings.c
subprojects/amber_engine_common/: meson.build
subprojects/amber_engine_common/include/amber_engine/bindings/: proc_table.h  procedures.h
subprojects/amber_engine_common/include/amber_engine/common/: functions.h  types.h
subprojects/amber_engine_common/include/amber_engine/config/: config.h
subprojects/amber_engine_common/include/amber_engine/memory/: allocator.h  handling_strategy.h
subprojects/amber_engine_common/include/amber_engine/runtime/: executor.h  system_manager.h
subprojects/tinydir/: meson.build
subprojects/tinydir/include/tinydir/: tinydir.h
subprojects/tomlc99/: meson.build
